perf: query album2